# unikernel-edge-faas

./: .gitignore  Cargo.toml  README.md  requirements.txt
benchmarks/: README.md
benchmarks/app-go/: .gitignore  benchmark.go  genfile.sh  go.mod  go.sum
benchmarks/app-node/: main.js
benchmarks/app-python/: aioserver.py  server.py
benchmarks/docker-go/: Dockerfile  build.sh
benchmarks/docker-node/: Dockerfile  build.sh
benchmarks/linux-go/: .gitignore  Dockerfile  build.sh  extract-rootfs.sh  faas.openrc  linux.json  run-firecracker.sh
benchmarks/linux-node/: Dockerfile  build.sh  faas.openrc  linux.json
benchmarks/linux-python/: Dockerfile  build.sh  faas.openrc
benchmarks/nanos-go/: Dockerfile  build.sh  config.json  run-firecracker.sh
benchmarks/nanos-node/: Dockerfile  build.sh
benchmarks/nanos-python/: Dockerfile  build.sh  config.json  nanos.json
benchmarks/osv-go/: .gitignore  Dockerfile  build.sh  osv-rofs.json  osv-zfs.json  run-qemu.sh
benchmarks/osv-node/: Dockerfile  build.sh  osv-rofs.json  osv-zfs.json
benchmarks/osv-python/: Dockerfile  build.sh  osv-rofs.json  osv-zfs.json
experiments/alloc/: alloc.csv  bench.sh  count-faults.sh  gen-registry.sh  measure.sh  plot.py
experiments/burst/: .gitignore  bench.sh  gen-registry.sh  measure.sh  plot.py  time.csv
experiments/cold_start/: .gitignore  bench.sh  cold-start.csv  gen-registry.sh  measure.sh  plot-combined.py  plot.py
scripts/: cleanup_taps.sh
src/: callback.rs  command.rs  dispatcher.rs  docker.rs  instance.rs  main.rs  network.rs  proxy.rs  reaper.rs
(+137 files in other folders)
