[package]
name = "unifaas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.9.0"
axum = "0.6.19"
bollard = "0.14.0"
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["full"] }
ipnet = "2.8.0"
libc = "0.2.147"
nix = "0.26.2"
serde = { version = "1.0.178", features = ["serde_derive"] }
serde_derive = "1.0.178"
serde_json = "1.0.104"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.8", features = ["full"] }
toml = "0.7.6"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }
